# sample-ai-api-unified

./: .gitignore  Makefile  README.md  env_template  pyproject.toml
.agents/memory/adr/: ADR-0001-env-as-canonical-runtime-config-store-with-auto-quoted-writes.md  ADR-0002-catalog-must-mirror-the-installed-library-registry-with-custom-model-escape-hatch.md  ADR-0003-middleware-configured-via-menu-generated-yaml-ui-inverts-allowed-entities-to-a-redact-list.md  ADR-0004-makefile-is-the-canonical-switch-between-local-library-checkout-and-pypi-release.md  INDEX.md
.github/workflows/: ci.yml
config/: README.md
scripts/: generate_sample_assets.py
src/sample_ai_api_unified/: __init__.py  __main__.py  app.py  audio.py  catalog.py  clipboard.py  envfile.py  guard.py  middleware_profile.py  obs.py  onboarding.py  paths.py  promptgen.py  runner.py  samples.py  state.py  structured_schemas.py  ui.py  voice_util.py
src/sample_ai_api_unified/demos/: __init__.py  completions.py  embeddings.py  images.py  middleware_demo.py  structured.py  videos.py  voice.py
src/sample_ai_api_unified/tui/: __init__.py  app.py  fileutil.py  styles.tcss
src/sample_ai_api_unified/tui/modals/: __init__.py  choice.py  confirm.py  onboarding.py  prompt.py
src/sample_ai_api_unified/tui/screens/: __init__.py  base.py  completions.py  conversation.py  embeddings.py  images.py  middleware.py  placeholder.py  providers.py  structured.py  videos.py  voice.py
src/sample_ai_api_unified/tui/widgets/: __init__.py  obs_log.py
tests/: conftest.py  test_advanced_completions.py  test_audio.py  test_catalog.py  test_catalog_registry_sync.py  test_clipboard.py  test_conversation.py  test_envfile.py  test_guard.py  test_imports.py  test_middleware_editor.py  test_middleware_profile.py  test_obs.py  test_obs_runner.py  test_onboarding.py  test_promptgen.py  test_samples.py  test_state.py  test_tui.py  test_ui.py
